빌드 이전까지 성공

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main>
       <button id="load-button">Load</button>
-      <button id="play-button">Play</button>
+      <div id="result-area"></div>
     </main>
   </body>
   <script src="./index.js"></script>
